--- a/server/package.json
+++ b/server/package.json
@@ -2,8 +2,10 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "ftp": "^0.3.10",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3"
   }
