--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "express": "^4.19.2",
     "ftp": "^0.3.10",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.4.3"
   }
 }
